# SQUFOF

./: Makefile.am  README.md  configure.ac
lib/: Makefile.am  arith-32.h  arith-64.h  arith-data.c  arith-mont-32.h  arith-mont-64.h  arith-none.h  arith-ppc32.h  arith-ppc64.h  arith-sqrt.c  arith-sqrt.h  arith-x86_32.h  arith-x86_64.h  arith.h
src/: Makefile.am  sqrt.c  squfof-back.c  squfof-forth.c  squfof.c  squfof.h  squfof_u64.c  t-squfof.c
