## This file is part of the ARITH project.
## Copyright (C) 2010 F. G. Dorais.
##
## This program is free software; you can redistribute it and/or modify it
## under the terms of the GNU General Public License as published by the
## Free Software Foundation; either version 2, or (at your option) any
## later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## file COPYING for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software Foundation,
## Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. 

lib_LIBRARIES = libarith.a
include_HEADERS = arith.h arith-arch.h arith-32.h arith-64.h arith-mont-32.h arith-mont-64.h arith-sqrt.h

libarith_a_SOURCES = arith-data.c arith-sqrt.c